--- a/apropos.html
+++ b/apropos.html
@@ -7,7 +7,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="image/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="image/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="image/favicon/favicon-16x16.png">
-    <link rel="manifest" href="image/site.webmanifest">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
@@ -37,15 +36,24 @@
     </header>
 
     <div id="container">
-
-      <p>Ceci est un jeu qui a été fait dans le cadre d'un projet informatique visant à s'initier au web, encadré par des professeurs de l'école ENSG Géomatique.</p>
-      <img src="image/ecole_ensg.png">
+      <div id="intro">
+        <p>Ceci est un jeu qui a été fait dans le cadre d'un projet informatique visant à s'initier au web, encadré par des professeurs de l'école ENSG Géomatique.</p>
+        <p>Les sons ont été fournits par <a href="https://www.zapsplat.com/">zapsplat</a>.</p>
+        <p>Le code a été baclé grâce à <a href="https://github.com/">github</a> et son problème de server samedi.</p>
+      </div>
+      <img id="ensg" src="image/ecole_ensg.png">
 
       <div class="contact">
         <article class="letter">
           <div class="side">
+            <h1>Contactez-nous</h1>
+            <p>
+              <textarea placeholder="Your message"></textarea>
+            </p>
           </div>
           <div class="side">
+            <p><input type="text" placeholder="Votre nom" ></p>
+            <p><input type="email" placeholder="Votre mail" ></p>
             <p><button id="sendLetter">Envoyer</button></p>
           </div>
         </article>
@@ -56,11 +64,8 @@
       </div>
         <!-- <script  src="./script_contact.js"> -->
         <script>
-          function addClass() {
-            document.body.classList.add("sent");
-          }
+          function addClass() {document.body.classList.add("sent");}
           sendLetter.addEventListener("click", addClass);
-
         </script>
 
 
