--- a/solution.html
+++ b/solution.html
@@ -40,11 +40,11 @@
       <div class="scenario">
         <h2>Affaire Bettencourt</h2>
         <p>
-          <ol>
-            <li>Aller au siège de l’Oréal pour voir Mme Bettencourt. Y récupérer son adresse et du parfum.</li>
-            <li>Aller à la maison de Françoise Bettencourt Meyers (Rue Delabordère, Neuilly-sur-Seine). Y rencontrer son agent de sécurité.</li>
+          <ol>  <i></i>
+            <li>Aller au siège de l’Oréal (<i>48.8681	2.3233</i>) pour voir Mme Bettencourt. Y récupérer son adresse.</li>
+            <li>Aller à la maison de Françoise Bettencourt Meyers (<i>48.8779	2.2541</i>). Y rencontrer son agent de sécurité.</li>
             <li>Convaincre le vigile de vous divulguer l'adresse en lui donnant un peu de parfum.</li>
-            <li>Rencontrer Mme Bettencourt au restaurant le Fouquet’s et récupérer son témoignage manuscrit.</li>
+            <li>Rencontrer Mme Bettencourt au restaurant le Fouquet’s (<i>48.8715	2.3012</i>) et récupérer son témoignage manuscrit.</li>
           </ol>
         </p>
       </div>
